--- a/TraceIt/Views/SettingsPage.xaml
+++ b/TraceIt/Views/SettingsPage.xaml
@@ -16,6 +16,10 @@
         <StackLayout Style="{DynamicResource gradientStackLayout}">
             <Entry x:Name="entryName" Placeholder="Change your name"
                    FontSize="Large" Margin="20"/>
+
+            <Button x:Name="clearCacheButton" Text="Clear PDF cache (free up space)"
+                    CornerRadius="20" BackgroundColor="Blue" TextColor="White"
+                    Clicked="clearCacheButton_Clicked" IsVisible="False"/>
         </StackLayout>
     </ContentPage.Content>
     
